# voice_browsing2

./: .gitignore  README.md  a.txt  app.py  config_sample.py  openai_function_weather.py  pyproject.toml  remote_androidtv.py  remote_chat.py  remote_chrome.py  remote_chrome_androidtablet.py  remote_intent.py  remote_lanch.py  test.py  test_gpt copy 2.py  test_gpt.py  youtube_adskip.py  youtube_autoplay.py
templates/: hark.bundle.js  index.html  launcher.html  script.js
